# shack

./: shack.cabal
src/System/Process/: Shack.hs
